test/ui/src/compile_fail/std/emit_control_param_attrs.rs
fn main() {
    emit::emit!(#[cfg(enabled)] mdl: emit::path!("mdl"), "template");
}
